--- a/Prompt_Engineering_LangChain_MemoryChache_Chat.Predict().ipynb
+++ b/Prompt_Engineering_LangChain_MemoryChache_Chat.Predict().ipynb
@@ -124,7 +124,7 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "os.environ['openAI_API_Key']='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'"
+        "os.environ['openAI_API_Key']='sk-DGyca7'"
       ],
       "metadata": {
         "id": "EOakFOzKzApQ"
