--- a/Prompt_engineering_Lang_Chain__Design_Methodologies_Analysis_With_TASKS_elements.ipynb
+++ b/Prompt_engineering_Lang_Chain__Design_Methodologies_Analysis_With_TASKS_elements.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN05HJ58h7L6pXyIXD4Gk3t",
+      "authorship_tag": "ABX9TyPdZkaEq6j/Abr2oKvTmSGX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -299,9 +299,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Note: If it the out put has \\n and but we need \",\" to use comma separator we can use the following code to replace line change with comma and then use the comma separator\n",
-        "\n",
-        "data.replace('\\n', ',')\n",
+        "**Note: If it the out put has \\n and but we need \",\" to use comma separator we can use the following code to replace line change with comma and then use the comma separator:  data.replace('\\n', ',')**\n",
         "\n"
       ],
       "metadata": {
